public/assets/scss/_homepage.scss
// This file is part of SpongeHome, licensed under the MIT License (MIT).

// Copyright (c) SpongePowered <https://www.spongepowered.org>
// Copyright (c) contributors

// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:

// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.

// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

#header-display {
  padding-top: 4em;
  padding-bottom: 0;

  .container {
    display: flex;
    flex-wrap: wrap;
    -webkit-display: flex;
    -webkit-flex-wrap: wrap;
    padding: 0;
  }

  #main-display {
    display: flex;
    -webkit-display: flex;
    align-items: center;
  }

  #sponsors-display {
    padding: 1.5em 0;

    img {
      width: 95%;
      transition: all 0.2s ease-in-out;
      -webkit-transition: all 0.2s ease-in-out;
      -moz-transition:all 0.2s ease-in-out;
      -o-transition: all 0.2s ease-in-out;

      &:hover {
        transform: scale(1.1);
      }
    }
  }
}

#announcements {
  p {
    text-align: justify;
    padding: 0 10px;
    font-size: 18px;
  }

  h1 {
    padding: 0 10px;
  }

  h2 {
    padding: 0 10px;
  }

  h3 {
    margin-bottom: 20px;
    padding: 0 10px;
  }

  a {
    padding: 0 10px;
  }

  .col-lg-12 h2 {
    border-color: white;
  }
}

.announcement {
  h1 {
    font-size: 1.4em;
  }

  h2 {
    font-size: 1.3em;
  }

  h3 {
    font-size: 1.2em;
  }

  .emoji {
    height: 1.1em;
  }
}

#about {
  color: white;

  p {
    padding: 0 10px;
    text-align: justify;
  }

  h2 {
    border-color: white;
  }
}

#about .col-lg-12, #announcements .col-lg-12 {
  margin-bottom: 50px;
}

#social .col-lg-12 {
  margin: 0px;
  text-align: center;
}

#socialIcons {
  display: flex;
  -webkit-display: flex;

  i {
    transition: color .2s ease-in-out;
    -webkit-transition: color .2s ease-in-out;
    -moz-transition: color .2s ease-in-out;
    -o-transition: color .2s ease-in-out;
  }

  a {
    transition: background .2s ease-in-out;
    -webkit-transition: background .2s ease-in-out;
    -moz-transition: background .2s ease-in-out;
    -o-transition: background .2s ease-in-out;
    width: 10%;
    border-radius: 8px;
    margin: 8%;
    padding: 20px 2%;
    color: rgba(0, 0, 0, .2);
    color: $sponge_grey;

    &:hover {
      background-color: rgba(0, 0, 0, .2);
    }

    &:hover i {
      color: $sponge_yellow;
    }
  }
}

#about img {
  @media (max-width: 1180px) {
    margin: 50px auto;
  }
}

#offsite-links {
  display: flex;
  padding: 20px 0;
  -webkit-display: flex;
  flex-wrap: wrap;
  -webkit-flex-wrap: wrap;

  .col-xs-2 {
    padding: 0 40px;
  }

  div.row {
    margin: 0 auto;
    max-width: 1100px;
  }

  i {
    font-size: 3em;
    color: #111111;
  }

  a {
    width: 20%;
    color: #111111;
    text-decoration: none;
    opacity: .6;
    transition: opacity .2s ease-in-out;
    -webkit-transition: opacity .2s ease-in-out;
    -moz-transition: opacity .2s ease-in-out;
    -o-transition: opacity .2s ease-in-out;

    img {
      width: 50%;
      @media (max-width: 1000px) {
        width: 70%;
      }
    }

    &:hover {
      opacity: 1;
    }
  }
}

